--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ a {
 /* menu */
 
 #menumenu {
-    background-color: red;
+    background-color: purple;
     position: fixed;
     width: 100%;
     height: 50px;
