--- a/styles.css
+++ b/styles.css
@@ -15,12 +15,25 @@ a {
 /* menu */
 
 #menumenu {
-    background-color: purple;
+    background-color: #F2780C;
     position: fixed;
     width: 100%;
     height: 50px;
-    overflow: hidden;
+    overflow-y: hidden !important;
+    
+    z-index: 1;
+ 
+}
+
+#menutest {
+    padding: 50px;
+    background-color: #F2780C;
     margin-top: 200px;
+}
+
+#topmenu {
+    background-color : #F2780C;
+    position: fixed;
 }
 
 .gallery {
